--- a/demo.css
+++ b/demo.css
@@ -4,6 +4,8 @@ body {
     margin: 4em;
 }
 
+
+/*THIS IS THE STYLING OF THE HEADER SECTION, NOT TO FORGET*/
 header {
     background-color: pink;
     text-align: center;
@@ -11,12 +13,16 @@ header {
     max-width: 5000px;
     }
 
+#logo {
+  margin: 2px;
+}
 
-    /*THIS IS THE STYLING OF THE HEADER SECTION, NOT TO FORGET*/
+
+    /*THIS IS THE STYLING OF THE NAV SECTION, NOT TO FORGET*/
 #drop {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 1px;
+    padding: 0px;
     overflow: hidden;
     background-color: pink;
     }
@@ -133,17 +139,99 @@ article {
         
     }
     
-table {
-    table-layout: fixed;
-   border-collapse: collapse;
-    }
-
 form > ul > li {
   list-style-type: none;
 } 
 
+/*this is the styling of the form elements*/
+input {
+  width: 40%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid palevioletred;
+}
+
+input[type=submit] {
+    width: 100px;
+    margin: 5px;
+    background-color: pink;
+    }
+
+input[type=checkbox] {
+  width: 120px;
+  margin-left: 0px;
+  display: inline;
+}
+
+select {
+  width: 100px;
+  padding: 16px 20px;
+  border: none;
+  border-radius: 4px;
+  background-color: #f1f1f1;
+}
+
+label {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#gen {
+  height: 15px;
+  width: 10px;
+}
+
+#soo {
+  height: 10px;
+}
+
+p {
+  padding-left: 58px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+/*the end of forms styling*/
+
+/* styling of sign in forms*/
+#rpass {
+  margin: 3px;
+  text-align: center;
+}
+
+#sub {
+  display: block;
+}
+
+/* styling of tables*/
+table, th, td {
+  table-layout: fixed;
+ border-collapse: collapse;
+ border: 1px solid;
+ border-bottom: 1px solid pink;
+ border-spacing: 40px;
+  }
+
+table {
+  border-color: pink;
+}
+
+th {
+  background-color: pink;
+}
+
+tr:hover {
+  background-color: pink;
+}
+
+
+
+/*This is the styling of the footer element*/
 footer {
-        background-color: pink;
         text-align: center;
-        font-size: large;
+        padding: 5px;
+        position: sticky;
         }
+
+#footer {
+  text-align: center;
+}
