--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@ h2 ~ p {
     background-color: magenta;
 }
 
-ul > li {
-    background-color: blue;
-}
-
 address > strong {
     color: blue;
 }
 
 dl > dd {
     background-color: cyan;
+}
+
+li > time {
+    background-color: blue;
 }
